<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.kissspace.mine.viewmodel.EditProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            style="@style/commonTopBar"
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:lineVisible="false"
            app:title="编辑资料"
            android:background="@color/color_232323"
            app:barStyle="transparent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_avatar"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginTop="12dp"
            android:background="@color/color_232323">

            <TextView
                android:id="@+id/tv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mine_profile_avatar"
                android:textColor="@color/white80"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/tv_avatar_tips"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_avatar_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mine_profile_avatar_tips"
                android:textColor="@color/white50"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_avatar" />

            <ImageView
                android:id="@+id/arrow_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/mine_icon_arrow_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                showUserEditAvatar="@{vm.userInfo}"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrow_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                avatarVerifyVisibility="@{vm.userInfo}"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@mipmap/mine_icon_avatar_auditing"
                app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                app:layout_constraintEnd_toEndOf="@id/iv_avatar"
                app:layout_constraintStart_toStartOf="@id/iv_avatar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/color_232323"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:id="@+id/tv_nickname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/mine_profile_nickname"
                    android:textColor="@color/white80"
                    android:textSize="15sp" />

                <TextView
                    profileNickname="@{vm.userInfo}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="32dp"
                    android:layout_toEndOf="@id/tv_nickname_title"
                    android:textColor="@color/color_949499"
                    tools:text="xxxxxxx"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/mine_icon_arrow_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_edit_sex"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:id="@+id/tv_sex_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/mine_profile_sex"
                    android:textColor="@color/color_ui_main_text"
                    android:textSize="15sp" />

                <TextView
                    profileSex="@{vm.userInfo}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="32dp"
                    android:layout_toEndOf="@id/tv_sex_title"
                    android:textColor="@color/color_949499"
                    tools:text="xxxxxxx"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/mine_icon_arrow_gray" />
            </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_edit_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp">

                <TextView
                    android:id="@+id/tv_sign_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/mine_profile_sign"
                    android:textColor="@color/white80"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    profileSignInfo="@{vm.userInfo}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/color_949499"
                    tools:text="xxxxxxx"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/arrow_sign"
                    app:layout_constraintStart_toEndOf="@id/tv_sign_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/mine_icon_arrow_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <RelativeLayout
                android:id="@+id/layout_edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:id="@+id/tv_birthday_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/mine_profile_birthday"
                    android:textColor="@color/white80"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="32dp"
                    android:layout_toEndOf="@id/tv_birthday_title"
                    android:text="@{vm.userInfo.birthday}"
                    android:textColor="@color/color_949499"
                    tools:text="xxxxxxx"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/mine_icon_arrow_gray" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/color_232323"
            android:paddingStart="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_title_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mine_profile_upload"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_count_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="(0/4)"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/tv_title_picture"
                app:layout_constraintTop_toTopOf="@id/tv_title_picture" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_picture" />

            <ImageView
                android:id="@+id/addPicture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/mine_icon_add_picture"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/recycler_view"
                app:layout_constraintTop_toTopOf="@id/recycler_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>